@@ -108,6 +108,11 @@ use strict;
 # These are both used by the virtual datasets inbox, buffer etc.
 
 my $INFO = {
+	import => {
+		sqlname => "import",
+		class => "EPrints::DataObj::Import",
+		datestamp => "datestamp",
+	},
 	metafield => {
 		sqlname => "mf", # identifiers get too long
 		class => "EPrints::DataObj::MetaField",
@@ -916,7 +921,7 @@ into SQL (not counters or cache which work a bit differently).
 
 sub get_sql_dataset_ids
 {
-	return( qw/ metafield cachemap message loginticket eprint user document saved_search subject history access request / );
+	return( qw/ import metafield cachemap message loginticket eprint user document saved_search subject history access request / );
 }
 
 ######################################################################
